--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Hu
 middle_name: 
 last_name: Jin
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+contact_note: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Hu Jin's personal website. 
 footer_text: >
